--- a/css/styles.css
+++ b/css/styles.css
@@ -105,12 +105,16 @@ label {
 
 input[type="color"] {
     width: 40px;
-    height: 40px;
+    min-height: 15px;
     padding: 0;
     border: none;
     background-color: transparent;
     cursor: pointer;
+    display: block;
+    margin: 5px 0;
+    box-sizing: border-box;
 }
+
 
 .logo-img {
     width: auto;
